# django-comments-tree

./: .env.docker-example  .gitignore  .travis.yml  CHANGELOG.md  README.rst  docker-compose.yml  make.sh  make2.sh  make_no_test.sh  pyproject.toml  pytest.ini  requirements.pip  setup.py  test.sh  tox.ini
django_comments_tree/: __init__.py  abstract.py  admin.py  apps.py  forms.py  models.py  moderation.py  signals.py  urls.py  utils.py  views.py
django_comments_tree/api/: frontend.py  serializers.py  views.py
django_comments_tree/conf/: defaults.py
django_comments_tree/forms/: base.py
django_comments_tree/management/commands/: populate_tree_comments.py
django_comments_tree/migrations/: 0002_blacklisteddomain.py  0003_auto_20170220_1333.py  0004_auto_20170221_1510.py  0005_auto_20170920_1247.py  0006_auto_20181204_0948.py
django_comments_tree/templates/django_comments_tree/: comment_tree.html
django_comments_tree/templatetags/: comments.py  comments_tree.py  comments_xtd.py
django_comments_tree/tests/: settings.py  test_forms.py  test_models.py  test_moderation.py  test_queries.py  test_templatetags.py  test_views.py
django_comments_tree/views/: comments.py
docs/: example.rst  extending.rst  index.rst  logic.rst  migrating.rst  settings.rst  templates.rst  templatetags.rst  tutorial.rst
example/: README.md
example/comp/: README.md  context_processors.py  install.sh  manage.py  settings.py  urls.py
example/custom/: README.md  manage.py  settings.py  urls.py
example/simple/: README.md  install.sh  manage.py  settings.py  urls.py
(+25 files in other folders)
